--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
     "@discordjs/opus": "^0.8.0",
     "@distube/soundcloud": "^1.3.0",
     "@distube/spotify": "^1.5.1",
-    "@distube/ytdl-core": "^4.11.17",
-    "@distube/ytsr": "^1.2.5",
+    "@distube/ytdl-core": "^4.13.7",
+    "@distube/ytsr": "^2.0.4",
     "discord.js": "^14.7.1",
     "distube": "^4.0.0",
     "dotenv": "^16.4.5",
     "ffmpeg-static": "^4.4.1",
     "imdb-api": "^4.4.1",
     "letterboxd-client": "^1.0.1",
-    "libsodium-wrappers": "^0.7.10",
-    "simsimi": "^3.0.0"
+    "libsodium-wrappers": "^0.7.10"
   }
 }
