--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "@discordjs/opus": "^0.8.0",
     "@distube/soundcloud": "^1.3.0",
     "@distube/spotify": "^1.5.1",
-    "@distube/ytdl-core": "^4.13.7",
+    "@distube/ytdl-core": "^4.14.4",
     "@distube/ytsr": "^2.0.4",
     "discord.js": "^14.7.1",
     "distube": "^4.0.0",
     "dotenv": "^16.4.5",
     "ffmpeg-static": "^4.4.1",
-    "imdb-api": "^4.4.1",
-    "letterboxd-client": "^1.0.1",
-    "libsodium-wrappers": "^0.7.10"
+    "libsodium-wrappers": "^0.7.10",
+    "ytdl-core": "^4.11.5",
+    "ytpl": "^2.3.0",
+    "ytsr": "^3.8.4"
   }
 }
