--- a/package.json
+++ b/package.json
@@ -1,26 +1,25 @@
 {
-  "name": "disc-bot",
+  "name": "srincrivel",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "@discordjs/opus": "^0.8.0",
-    "@distube/soundcloud": "^1.3.0",
-    "@distube/spotify": "^1.5.1",
-    "@distube/ytdl-core": "^4.14.4",
-    "@distube/ytsr": "^2.0.4",
-    "discord.js": "^14.7.1",
-    "distube": "^4.0.0",
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.17.0",
+    "@distube/deezer": "^2.0.1",
+    "@distube/soundcloud": "^2.0.4",
+    "@distube/spotify": "^2.0.2",
+    "@distube/youtube": "^1.0.4",
+    "@distube/yt-dlp": "^2.0.1",
+    "distube": "^5.0.4",
     "dotenv": "^16.4.5",
-    "ffmpeg-static": "^4.4.1",
-    "libsodium-wrappers": "^0.7.10",
-    "ytdl-core": "^4.11.5",
-    "ytpl": "^2.3.0",
-    "ytsr": "^3.8.4"
+    "ffmpeg-static": "^5.2.0",
+    "libsodium-wrappers": "^0.7.15"
   }
 }
