--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@distube/spotify": "^2.0.2",
     "@distube/youtube": "^1.0.4",
     "@distube/yt-dlp": "^2.0.1",
+    "@google-ai/generativelanguage": "^2.8.0",
+    "@google/generative-ai": "^0.21.0",
+    "discord.js": "^14.16.3",
     "distube": "^5.0.4",
     "dotenv": "^16.4.5",
     "ffmpeg-static": "^5.2.0",
