--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "srincrivel": "./index.js"
   },
   "scripts": {
+    "start": "node --no-warnings index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -23,7 +24,6 @@
     "@distube/ytdl-core": "^4.16.12",
     "@google-ai/generativelanguage": "^2.8.0",
     "@google/generative-ai": "^0.21.0",
-    "axios": "^1.10.0",
     "canvas": "^3.1.0",
     "chess.js": "^1.1.0",
     "discord.js": "^14.16.3",
